# tagboard

./: .gitignore  AGENTS.md  README.md  README.pt-BR.md  bunfig.toml  custom-data-backup.json  custom-data-newmodel.json  custom_data-bkp.json  eslint.config.js  package.json  pyproject.toml  run.py
src/: __init__.py  config.py  index.html  main.js  main.py  preload.js  renderer.js  styles.css  utils.js  utils.py
src/data/: __init__.py  hashtags.js  hashtags.py
