[project]
name = "tag-app"
version = "1.0.7"
description = "tags for game characters"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "gabszap", email = "gabszap@proton.me" }
]
dependencies = [
  "flet==0.28.3",
  "pyperclip>=1.8.2"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.tagapp"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "tag-app"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by gabszap"

[tool.flet.app]
path = "."

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
